--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,199 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<header>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                
+                <a class="navbar-brand" href="#featured"><h1><i class=" fa fa-paw"></i>American <span class="subhead">Pet MD</span></h1></a>
+            </div><!-- navbar-header -->
+            <div class="collapse navbar-collapse" id="collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#featured">Home</a></li>
+                    <li><a href="#mission">Mission</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#staff">Staff</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                </ul>
+            </div><!-- collapse navbar-collapse -->
+        </div><!-- container -->
+    </nav>
+    
+    <div class="carousel fade" data-ride="carousel" id="featured">
+        
+        <ol class="carousel-indicators">
+        </ol>
+        
+        <div class="carousel-inner fullheight">
+            <div class="item"><img src="https://dl.dropboxusercontent.com/u/6407774/Carousel%20American%20Pet%20MD%20-%201.png" alt="Lifestyle Photo"></div>
+            <div class="item"><img src="https://dl.dropboxusercontent.com/u/6407774/Carousel%20American%20Pet%20MD%20-%202.png" alt="Mission"></div>
+            <div class="item"><img src="https://dl.dropboxusercontent.com/u/6407774/Carousel%20American%20Pet%20MD%20-%203.png" alt="Vaccinations"></div>
+            <div class="item"><img src="https://dl.dropboxusercontent.com/u/6407774/Carousel%20American%20Pet%20MD%20-%204.png" alt="Fish"></div>
+            <div class="item"><img src="https://dl.dropboxusercontent.com/u/6407774/Carousel%20American%20Pet%20MD%20-%205.png" alt="Exotic Animals"></div>
+        </div><!-- carousel-inner -->
+        <a class="left carousel-control" href="#featured" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="right carousel-control" href="#featured" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- featured carousel -->
+</header>
+    
+    <div class="main">
+        <div class="page" id="mission">
+            <div class="content container">
+                <h2>Our Mission</h2>
+                <div class="row">
+                    <p class="col-md-5 col-md-offset-1">American Pet MD strives to blend the best in traditional and alternative medicine in the diagnosis and treatment of companion animals including dogs, cats, birds, reptiles, rodents, and fish. We apply the experience garnered in the centuries old tradition of veterinary medicine, to find the safest treatments and&nbsp;cures.</p>
+                    <p class="col-md-5">We strive to be your pet's medical experts from youth through the senior years. We build preventative health care plans for each and every one of our patients, based on breed, age, and sex, so that your pet receives the most appropriate care at crucial milestones. We want to give your pet a long and healthy&nbsp;:life.</p>
+                </div><!-- row -->
+            </div><!-- content container -->
+        </div><!-- mission page-->
+        
+        <div class="page" id="services">
+            <div class="content container">
+                <h2>Services</h2>
+                <div class="row">
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary%20services%20-%201%20Exotic%20Pets.png" alt="Icon">
+                        <h3>Exotic Pets</h3>
+                        <p>We offer specialized care for reptiles, rodents, birds, and other exotic pets.</p>
+                    </article>
+                    
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary%20services%20-%202%20Grooming.png" alt="Icon">
+                        <h3>Grooming</h3>
+                        <p>Our therapeutic grooming treatments help battle fleas, allergic dermatits, and other challenging skin conditions.</p>
+                    </article>
+                    
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary%20services%20-%203%20-%20General%20Health.png" alt="Icon">
+                        <h3>General Health</h3>
+                        <p>Wellness and senior exams, ultrasound, x-ray, and dental cleanings are just a few of our general health services.</p>
+                    </article>
+                    
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary_services_-_4.1_-_Nutrition.png" alt="Icon">
+                        <h3>Nutrition</h3>
+                        <p>Let our nutrition experts review your pet's diet and prescribe a custom nutrition plan for optimum health and disease prevention.</p>
+                    </article>
+                    
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary%20services%20-%205%20-%20Pest%20Control.png" alt="Icon">
+                        <h3>Pest Control</h3>
+                        <p>We offer the latest advances in safe and effective prevention and treatment of fleas, ticks, worms, heart worm, and other parasites.</p>
+                    </article>
+                    
+                    <article class="service col-md-4 col-sm-6 col-xs-12">
+                        <img class="icon" src="https://dl.dropboxusercontent.com/u/6407774/Veterinary%20services%20-%206%20-%20Vaccinations.png" alt="Icon">
+                        <h3>Vaccinations</h3>
+                        <p>Our veterinarians are experienced in modern vaccination protocols that prevent many of the deadliest diseases in pets.</p>
+                    </article>
+                </div><!-- row -->
+            </div><!--content container -->
+        </div><!-- services page -->
+        
+        <div class="page" id="staff">
+            <div class="container">
+                <h2 id="ourstaff">Our Staff</h2>
+                <div class="row">
+                    <div class="doctor col-lg-4">
+                        <div class="row">
+                            <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%203.png" alt="Photo of Dr Winthrop">
+                            </div><!-- photo -->
+                            <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
+                                <h3>Dr. Winthrop</h3>
+                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                            </div><!-- info -->
+                        </div><!-- inner row -->
+                    </div><!-- doctor -->
+                    
+                    <div class="doctor col-lg-4">
+                        <div class="row">
+                            <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%202.png" alt="Photo of Dr Chase">
+                            </div><!-- photo -->
+                            <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
+                                <h3>Dr. Chase</h3>
+                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                            </div><!-- info -->
+                        </div><!-- inner row -->
+                    </div><!-- doctor -->
+                    
+                    <div class="doctor col-lg-4">
+                        <div class="row">
+                            <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%201.png" alt="Photo of Dr Sanders">
+                            </div><!-- photo -->
+                            <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
+                                <h3>Dr. Sanders</h3>
+                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                            </div><!-- info -->
+                        </div><!-- inner row -->
+                    </div><!-- doctor -->
+                </div><!-- outer row-->
+            </div><!-- container -->
+        </div><!-- staff page -->
+        
+        <div class="page" id="testimonials">
+            <div class="container-fluid">
+                <h2>Testimonials</h2>
+                <div class="row">
+                    
+                    <blockquote class="col-md-6 col-lg-3" id="lisal">
+                        <div class="quote">
+                            <span class="intro">The facilities are always impeccably clean, and untoward accidents</span>
+                            <span class="more">are immediately cleaned up. I have never felt that your offices and rooms are anything but well maintained.  Everything is done exceedingly well and has been consistently superior. Your staff has always been friendly, welcoming, considerate, compassionate, and very professional. Every aspect of my pet’s care, in and of itself, and your consideration for us, as owners, has been personal and professional. Nothing could be done any better.   I have been and continue to be exceedingly pleased with every aspect of your clinic and recommend it to others at every occasion.</span>
+                            <span class="customer">Lisa L.</span>
+                        </div>
+                    </blockquote>
+                    
+                    <blockquote class="col-md-6 col-lg-3" id="mcphersons">
+                        <div class="quote">
+                            <span class="intro">When Samantha, our Siamese cat, began sleeping all the time</span>
+                            <span class="more">and urinating excessively, we brought her to see the specialists at Amercian Pet MD. After running a blood test, we got a confirmation that Samantha was showing signs of diabetes. The doctor put us on a daily routine to provide Samantha insulin injections, and showed us how to administer the shots. We weren't sure we could do it, but the doctors at American were very supportive and encouraging. Now, two years later, Samantha is still free from any complications of diabetes, and her blood sugar regularly tests normal. Thank you, American Pet MD!</span>
+                            <span class="customer">The McPhersons</span>
+                        </div>
+                    </blockquote>
+                    
+                    <blockquote class="col-md-6 col-lg-3" id="janeh">
+                        <div class="quote">
+                            <span class="intro">During the summer, our rabbit, Tonto, began to have severe redness</span>
+                            <span class="more">and itching on his belly and feet. Through diagnostic testing, we learned that Tonto is severely allergic to over a dozen kinds of grass pollen. We've now been doing allergy injections for several months, and his itching and redness have nearly gone away. I'm very thankful to the veterinarians and staff at American Pet MD for the excellent care Tonto received, and for nipping his allergies in the bud, so to speak.</span>
+                            <span class="customer">Jane H.</span>
+                        </div>
+                    </blockquote>
+                    
+                    <blockquote class="col-md-6 col-lg-3" id="lorraines">
+                        <div class="quote">
+                            <span class="intro">American Pet MD does everything well – never a complaint.</span>
+                            <span class="more">You are the friendliest people on the planet and I would not go to another vet, no matter where I move to.</span>
+                            <span class="customer">Lorraine S.</span>
+                        </div>
+                    </blockquote>
+                    
+                </div><!-- row -->
+            </div><!-- container -->
+        </div><!-- testimonials page -->
+    </div><!-- main -->
+    
+    <footer>
+        <div class="content container-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p>Call us toll-free at <span class="phone">800-888-0000</span></p>
+                    <p>All contents &copy; 2015. All rights reserved.</p>
+                </div><!-- col-sm-6 -->
+                <div class="col-sm-6">
+                    <nav class="navbar navbar-default" role="navigation">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Terms of use</a></li>
+                            <li><a href="#">Privacy policy</a></li>
+                        </ul>
+                    </nav>
+                </div><!-- col-sm-6 -->
+            </div><!-- row -->
+        </div><!-- content container -->
+    </footer>
