Carousel selectors fix

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,11 +101,11 @@
                     <div class="doctor col-lg-4">
                         <div class="row">
                             <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
-                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%203.png" alt="Photo of Dr Winthrop">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%203.png" alt="Photo of Dr Bole">
                             </div><!-- photo -->
                             <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
-                                <h3>Dr. Winthrop</h3>
-                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                                <h3>Dr. Bole</h3>
+                                <p>Dr. Bole earned her veterinary degree in 2003 and has worked at American Pet MD since 2007. She treats exotic pets in addition to cats and dogs. She and her husband, also a veterinarian, have a son in high school. Her pets include dogs, cats, a rabbit and a guinea pig, in addition to her foster pets. </p>
                             </div><!-- info -->
                         </div><!-- inner row -->
                     </div><!-- doctor -->
@@ -113,11 +113,11 @@
                     <div class="doctor col-lg-4">
                         <div class="row">
                             <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
-                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%202.png" alt="Photo of Dr Chase">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%202.png" alt="Photo of Dr Nixon">
                             </div><!-- photo -->
                             <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
-                                <h3>Dr. Chase</h3>
-                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                                <h3>Dr. Nixon</h3>
+                                <p> Dr. Nixon has practiced since graduating and has co-owned American Pet MD Veterinary Clinic since 2001. He works on both large animals and small animals. His pets include one dog, two cats, and one budgie. Hobbies include bicycling, kayaking, and reading.</p>
                             </div><!-- info -->
                         </div><!-- inner row -->
                     </div><!-- doctor -->
@@ -125,11 +125,11 @@
                     <div class="doctor col-lg-4">
                         <div class="row">
                             <div class="photo col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1 col-md-2 col-md-offset-2 col-lg-4 col-lg-offset-0">
-                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%201.png" alt="Photo of Dr Sanders">
+                                <img class="img-circle" src="https://dl.dropboxusercontent.com/u/6407774/Doctor%20-%201.png" alt="Photo of Dr Foley">
                             </div><!-- photo -->
                             <div class="info col-xs-8 col-xs-offset-2 col-sm-7 col-sm-offset-0 col-md-6 col-lg-8">
-                                <h3>Dr. Sanders</h3>
-                                <p>Lorem ipsum dolor sit amet, non feugiat et, nulla ut tempor mauris, habitasse euismod consequat gravida ac convallis. Ipsum eu. Ut accumsan magna dictumst aenean, mauris integer dolor et magnis diam sem, adipiscing sed wisi convallis per a nullam, interdum feugiat. </p>
+                                <h3>Dr. Foley</h3>
+                                <p>Dr. Foley received her Bachelor of Science degree in zoology, and completed her MVPM and DVM in 2005. She treats exotic pets in addition to cats and dogs. She is an avid birdwatcher, gardener and hiker. She has shared her home and heart with many cats, dogs, chickens, sheep, and rabbits. </p>
                             </div><!-- info -->
                         </div><!-- inner row -->
                     </div><!-- doctor -->
