--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,9 +17,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
-img {
-    max-width: 200px;
-}
 
 /* Header Navigation */
 
@@ -275,13 +272,13 @@ and (max-width: 768px) {
     background-size: cover;
 }
 
-#testimonials.quote {
+#testimonials .quote {
     font-size: 1.2em;
     line-height: 110%;
     font-weight: 400;
 }
 
-#testimonials .quote .more, #testimonials .quote .customer {
+#testimonials .quote .more, #testimonials .customer {
     opacity: 0;
     font-size: 0;
     line-height: 0;
