--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,18 +20,18 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Header Navigation */
 
-header .navbar {
+.navbar {
     padding: 30px 0;
     transition: all .5s ease-out;
 }
 
-header .navbar-default {
+.navbar-default {
     background-color: transparent;
     border: none;
 }
 
 header .navbar-default .navbar-nav a {
-    color: white;
+    color: #fff;
     padding: 5px 8px;
 }
 
